[package]
name = "men_in_tights"
description = "Unofficial Robinhood API bindings for Rust. 📈"


edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/men-in-tights"
version = "0.0.1"

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
reqwest = "0.11.22"
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
indoc = "2.0.4"
